--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="btn hire-me padd-15">
-                                                <a href="images/Talib_CV.pdf" class="btn" target="_blank" rel="noopener noreferrer">Open CV</a>
+                                                <a href="images/Talib CV.pdf" class="btn" target="_blank" rel="noopener noreferrer">Open CV</a>
                                             </div>
                                         </div>
                                     </div>
