Finalised layout and styling for project cards

--- a/index.html
+++ b/index.html
@@ -102,53 +102,69 @@
                         </div>
                         <div class="row">
                             <!--- Project items-->
-                            <div class="project-item padd-15" onclick="openModal('modal1')">
+                            <div class="project-item padd-15" onclick="openModal('modal8')">
                                 <div class="project-item-inner shadow-dark"></div>
                                 <div class="project-img">
                                     <img src="images/programming/webscraping_function.png" alt="">
                                 </div>
                             </div>
                             <!--Hidden modal-->
-                            <div id="modal1" class="modal-overlay">
+                            <div id="modal8" class="modal-overlay">
                                 <div class="modal-content">
-                                    <span class="close-button" onclick="closeModal('modal1')">&times;</span>
+                                    <span class="close-button" onclick="closeModal('modal8')">&times;</span>
                                     <h2>Automating Oscar Data Collection with Python</h2>
                                     <img src="images/programming/webscraping_function.png" alt="" class="modal-img">
                                     <p>During my master’s course, I used Python to build a custom webscraper that collected structured data from a wikipedia site. I wrote modular functions to pass parameters like year range and performer name. The function oscars_scraper() fetched Best Actress nomination data between 1920 and 2023 for a given performer. The resulting dataset was then cleaned and formatted into a pandas DataFrame. The output shown here is the top 10 entries returned for Janet Gaynor, including details like the film title, year, role, and whether the nomination resulted in a win. I also used pandas styling to make the data readable and visually accessible. This task strengthened my skills in requests, BeautifulSoup, function writing, and data manipulation.</p>
                                 </div>
                             </div>
                             <!--Project item end-->
-                            <div class="project-item padd-15" onclick="openModal('modal2')">
+                            <div class="project-item padd-15" onclick="openModal('modal7')">
                                 <div class="project-item-inner shadow-dark"></div>
                                 <div class="project-img">
                                     <img src="images/programming/simul8.png" alt="">
                                 </div>
                             </div>
                             <!--Hidden modal-->
-                            <div id="modal2" class="modal-overlay">
+                            <div id="modal7" class="modal-overlay">
                                 <div class="modal-content">
-                                    <span class="close-button" onclick="closeModal('modal2')">&times;</span>
+                                    <span class="close-button" onclick="closeModal('modal7')">&times;</span>
                                     <h2>Blood Collection System Simulation</h2>
                                     <img src="images/programming/simul8.png" alt="" class="modal-img">
                                     <p>During my master's, I developed a discrete-event simulation using Simul8 to assess the efficiency of a hospital's blood sample collection process. The model replicated the full end-to-end workflow—from patient sample arrival through decision routing, transport via pod or driver systems, registration, analysis, and data upload. Each stage had its own logic and resource constraints. For instance, samples could be routed through either a pneumatic pod system or manually delivered by a driver, depending on system load. At registration, samples were split between haematology and chemistry analysers based on type. I configured delays, queues, and resource allocations (e.g. limited pod machines, drivers, and lab staff) to reflect realistic operational conditions. This simulation helped identify bottlenecks, test various routing scenarios, and measure performance metrics like turnaround time and analyser utilisation. It also offered clear visual outputs to support process improvement recommendations for lab efficiency.</p>
                                 </div>
                             </div>                            
                             <!--- Project items-->
-                            <div class="project-item padd-15" onclick="openModal('modal3')">
+                            <div class="project-item padd-15" onclick="openModal('modal6')">
                                 <div class="project-item-inner shadow-dark"></div>
                                 <div class="project-img">
                                     <img src="images/programming/dashboard.png" alt="">
                                 </div>
                             </div>
-                            <div id="modal3" class="modal-overlay">
+                            <div id="modal6" class="modal-overlay">
                                 <div class="modal-content">
-                                    <span class="close-button" onclick="closeModal('modal3')">&times;</span>
+                                    <span class="close-button" onclick="closeModal('modal6')">&times;</span>
                                     <h2>Exploring Crime Trends Through Interactive Dashboards</h2>
                                     <img src="images/programming/dashboard.png" alt="" class="modal-img">
                                     <p>As part of a data visualisation module during my master's course, I created an interactive dashboard using Power BI to analyse regional crime patterns in England and Wales. The goal was to apply core design principles—clarity, accessibility, and accuracy—while ensuring the interface remained engaging and easy to interpret. The dashboard included a bubble map showing average crime estimates per 1,000 people, a demographic pie chart by sex, and filter controls for age brackets. Beyond just plotting data, I learned how to guide a viewer's attention, limit chart clutter, and create hierarchy through layout. I ensured visual balance and used color strategically to differentiate variables. This project helped me develop a stronger understanding of storytelling through data. It also gave me practical experience turning raw datasets into meaningful, policy-relevant insights for a wide audience.</p>
                                 </div>
                             </div>                                        
-                            <!--Project item end-->                            
+                            <!--Project item end-->       
+                            <!--- Project items-->
+                            <div class="project-item padd-15" onclick="openModal('modal5')">
+                                <div class="project-item-inner shadow-dark"></div>
+                                <div class="project-img">
+                                    <img src="images/programming/ibm_postgresql_intro.png" alt="">
+                                </div>
+                            </div>
+                            <div id="modal5" class="modal-overlay">
+                                <div class="modal-content">
+                                    <span class="close-button" onclick="closeModal('modal5')">&times;</span>
+                                    <h2>IBM GPXX0T1YENV2: A Practical Introduction to pgAdmin and PostgreSQL</h2>
+                                    <img src="images/programming/ibm_postgresql_intro.png" alt="" class="modal-img">
+                                    <p>As part of an IBM-guided SQL course, I explored relational database design and management using PostgreSQL and the pgAdmin interface. This hands-on project focused on mastering key database operations such as creating databases and tables, and populating them both manually and via script files. Using the pgAdmin GUI, I practiced writing SQL queries, organizing schemas, and managing structured data efficiently. The visual interface allowed me to interact with the database without relying solely on command-line tools, helping me focus on data logic and query structuring. Throughout the project, I gained practical insight into backend data workflows and the role of SQL in scalable application design. This experience deepened my technical understanding of relational databases and laid a solid foundation for building data-driven solutions with confidence.</p>
+                                </div>
+                            </div>                                        
+                            <!--Project item end-->                           
                             <!--Project item end-->
                             <div class="project-item padd-15" onclick="openModal('modal4')">
                                 <div class="project-item-inner shadow-dark"></div>
@@ -166,15 +182,15 @@
                             </div>                                
                             <!--Project item end-->          
                             <!--Project item end-->
-                            <div class="project-item padd-15" onclick="openModal('modal5')">
+                            <div class="project-item padd-15" onclick="openModal('modal3')">
                                 <div class="project-item-inner shadow-dark"></div>
                                 <div class="project-img">
                                     <img src="images/programming/heatmap_london.png" alt="">
                                 </div>
                             </div>
-                            <div id="modal5" class="modal-overlay">
+                            <div id="modal3" class="modal-overlay">
                                 <div class="modal-content">
-                                    <span class="close-button" onclick="closeModal('modal5')">&times;</span>
+                                    <span class="close-button" onclick="closeModal('modal3')">&times;</span>
                                     <h2>Mapping Well-Being: A Borough-Level Heatmap</h2>
                                     <img src="images/programming/heatmap_london.png" alt="" class="modal-img">
                                     <p>In my free time, I explored the fundamentals of Python data visualisation by creating a heatmap of health ratings across London boroughs. I imported a public dataset, cleaned and pre-processed it using pandas, and matched the borough names to their corresponding areas on a UK shapefile. This gave me a deeper understanding of working with geospatial data and data merging techniques. The final output showed the percentage of residents reporting excellent health in each borough, revealing striking regional patterns. I used matplotlib and seaborn to style the map and define a custom color palette. This project helped me get comfortable with mapping libraries and reinforced the importance of clear, intuitive data presentation when exploring regional statistics.</p>
@@ -182,15 +198,15 @@
                             </div>                                       
                             <!--Project item end-->   
                             <!--Project item end-->
-                            <div class="project-item padd-15" onclick="openModal('modal6')">
+                            <div class="project-item padd-15" onclick="openModal('modal2')">
                                 <div class="project-item-inner shadow-dark"></div>
                                 <div class="project-img">
                                     <img src="images/programming/ibm.png" alt="">
                                 </div>
                             </div>
-                            <div id="modal6" class="modal-overlay">
+                            <div id="modal2" class="modal-overlay">
                                 <div class="modal-content">
-                                    <span class="close-button" onclick="closeModal('modal6')">&times;</span>
+                                    <span class="close-button" onclick="closeModal('modal2')">&times;</span>
                                     <h2>IBM PY0101EN: A Practical Introduction to Python</h2>
                                     <img src="images/programming/ibm.png" alt="" class="modal-img">
                                     <p>I completed IBM’s PY0101EN course, which gave me a solid grounding in Python for data science. It began with core concepts like variables, conditionals and loops before introducing functions, data structures and basic file handling. One of the highlights was learning to clean and extract data using libraries such as BeautifulSoup and pandas, which I used to parse HTML and analyze embedded data. The course also covered practical data science workflows including web scraping, visualising data with matplotlib, and performing basic statistical operations. I especially enjoyed the interactive labs and quizzes, which helped me apply the theory hands-on and build confidence in writing Python code from scratch. It laid the foundation for everything I’ve done with data since.</p>
@@ -198,15 +214,15 @@
                             </div>                                 
                             <!--Project item end-->   
                             <!--Project item end-->
-                            <div class="project-item padd-15" onclick="openModal('modal7')">
+                            <div class="project-item padd-15" onclick="openModal('modal1')">
                                 <div class="project-item-inner shadow-dark"></div>
                                 <div class="project-img">
                                     <img src="images/programming/couch2coder.png" alt="">
                                 </div>
                             </div>
-                            <div id="modal7" class="modal-overlay">
+                            <div id="modal1" class="modal-overlay">
                                 <div class="modal-content">
-                                    <span class="close-button" onclick="closeModal('modal7')">&times;</span>
+                                    <span class="close-button" onclick="closeModal('modal1')">&times;</span>
                                     <h2>BrightBlog: My First HTML/CSS Project</h2>
                                     <img src="images/programming/couch2coder.png" alt="" class="modal-img">
                                     <p>As part of Bright Network’s “Couch to Coder 2024” programme, I built my first static website: BrightBlog. Using only HTML and CSS, I created a colourful blog layout with filter buttons, a playful theme, and a responsive structure. I designed the navigation bar, styled interactive elements like the sidebar filters, and used CSS properties like flexbox, hover, and border-radius to enhance the visual feel. The project helped me build confidence in frontend development and understand the structure of a basic web page. I experimented with layout positioning, typography, and color palettes to reflect a fun and user-friendly interface. Although it was simple, this project solidified my interest in UI/UX and encouraged me to keep building. It's the first time I saw my code come to life in a browser.</p>
@@ -310,7 +326,7 @@
                                                             <h4 class="skill-title">
                                                                 <i class="fa fa-shirt"></i> Fashion
                                                             </h4>
-                                                            <p class="skill-text">Apperances are very important. It plays a big role in our interactions and how we see people. We say "don't judge a book by its cover" but it's much easier said than done. How we present ourselves shows how much we respect ourselves and tells others how much respect to give. I like to mix different styles and colours together to create my own outfits that macth well whilst not overdoing it. An additional dimension to fashion is perfume, something I'm also very passionate about.</p>
+                                                            <p class="skill-text">Apperances are very important. It plays a big role in our interactions and how we see people. We say "don't judge a book by its cover" but it's much easier said than done. How we present ourselves shows how much we respect ourselves and tells others how much respect to give. I like to mix different styles and colours together to create my own outfits that match well whilst not overdoing it. An additional dimension to fashion is perfume, something I'm also very passionate about.</p>
                                                     </div>
                                                     <div class="skill-item">
                                                             <h4 class="skill-title">
